# fprime-atmel-sam-reference

./: .clangd  .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.org  docker-compose.yml  project.cmake  run.sh  settings.ini
.tools/: atsamv71_xplained_edbg.cfg  launch.json
Base/: CMakeLists.txt  main.cpp
Base/Top/: CMakeLists.txt  atmelBasePackets.xml  atmelBaseTopology.cpp  atmelBaseTopology.hpp  atmelBaseTopologyDefs.hpp  instances.fpp  setup.cpp  setup.hpp  topology.fpp
Base/cmake/: FreeRTOS.cmake  arm-none-eabi-toolchain.cmake  cmsis.cmake  harmony.cmake  samv71-config.cmake  samv71q21b-gcc-toolchain.cmake  startup.cmake  target-config.cmake
Base/cmake/toolchain/: samv71q21b-gcc-toolchain.cmake  startup.cmake  target-config.cmake
Base/config/: README.org  main_samv71.c  startup_samv71q21b.c
Base/startup/: config.h  freeRTOS_hooks.c  main.cpp  startup_samv71q21b.c  startup_samv71q21b.h  startup_samv71q21b.ld
fprime-atmel/cmake/platform/: AtmelFw.cmake
fprime-atmel/cmake/platform/types/arm/: PlatformTypes.h
fprime-atmel/cmake/toolchain/support/: atmel-support.cmake
fprime-atmel/cmake/toolchain/support/sources/: extras.cpp
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/cmsis/: .csolution.yml  blinky.cproject.yml  blinky.csolution.yml  cdefault.yml  samv71.blink.cproject.yml  tool.cmake
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/cmsis/samv71_blink/packs/.Download/: ARM.CMSIS-Compiler.2.1.0.pack  ARM.CMSIS-Driver.2.10.0.pack  ARM.CMSIS-FreeRTOS.11.1.0.pdsc  ARM.CMSIS-View.1.2.0.pack  ARM.Cortex_DFP.1.1.0.pack
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/cmsis/samv71_blink/packs/.Local/: local_repository.pidx
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/cmsis/src/: main.c
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/harmony/: harmony.cmake
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/harmony/sam_v71_xult/: harmony-manifest-success.yml  initialization.c  interrupts.c  interrupts.h
fprime-atmel/cmake/toolchain/support/sources/samv71q21b/harmony/sam_v71_xult/event_recorder/: EventRecorderConf.h  EventRecorderRTOSHook.c  RTE_Components.h  freertos_view.scvd
fprime-cmsis/: README.md  fprime-arduino.cmake
fprime-cmsis/Atmel/Drv/AnalogDriver/: AnalogDriver.cpp  AnalogDriver.fpp  AnalogDriver.hpp
fprime-cmsis/Atmel/Drv/AnalogDriver/docs/: sdd.md
fprime-cmsis/Atmel/Drv/GpioDriver/: GpioDriver.cpp  GpioDriver.fpp  GpioDriver.hpp
fprime-cmsis/Atmel/Drv/HardwareRateDriver/: CMakeLists.txt  HardwareRateDriver.cpp  HardwareRateDriver.fpp  HardwareRateDriver.hpp  HardwareRateDriverArm.cpp  IntervalTimer.cpp  IntervalTimer.hpp
fprime-cmsis/Atmel/Drv/I2cDriver/: CMakeLists.txt  I2cDriver.cpp  I2cDriver.fpp  I2cDriver.hpp  I2cDriverArduino.cpp  I2cDriverLinux.cpp
fprime-cmsis/Atmel/Drv/I2cNodeDriver/: CMakeLists.txt  I2cNodeDriver.cpp  I2cNodeDriver.fpp  I2cNodeDriver.hpp
fprime-cmsis/Atmel/Drv/PwmDriver/: PwmDriver.cpp  PwmDriver.fpp  PwmDriver.hpp
fprime-cmsis/Atmel/Drv/PwmDriver/docs/: sdd.md
fprime-cmsis/Atmel/Drv/SpiDriver/: CMakeLists.txt  SpiDriver.cpp  SpiDriver.fpp  SpiDriver.hpp  SpiDriverArduino.cpp  SpiDriverLinux.cpp
fprime-cmsis/Atmel/Drv/SpiDriver/docs/: sdd.md
fprime-cmsis/Atmel/Drv/StreamDriver/: CMakeLists.txt  StreamDriver.cpp  StreamDriver.fpp  StreamDriver.hpp  StreamDriverArduino.cpp  StreamDriverAtmel.cpp  StreamDriverLinux.cpp
fprime-cmsis/Atmel/Os/: CMakeLists.txt  Console.cpp  Console.hpp  DefaultConsole.cpp  DefaultRawTime.cpp  RawTime.cpp  RawTime.hpp
fprime-cmsis/Atmel/Svc/ArduinoTime/: ArduinoTime.cpp  ArduinoTime.fpp  ArduinoTime.hpp  CMakeLists.txt
fprime-cmsis/Atmel/Svc/LifeLed/: LifeLed.cpp  LifeLed.fpp  LifeLed.hpp
fprime-cmsis/Atmel/Svc/LifeLed/docs/: sdd.md
fprime-cmsis/Atmel/Svc/Ports/: SetTime.fpp
fprime-cmsis/cmake/toolchain/: ATmega128.cmake  circuitplaybluefruit.cmake  circuitplayexpress.cmake  esp32.cmake  featherESP32.cmake  featherM0.cmake  featherM4.cmake  featherNRF52840.cmake  featherRP2350.cmake  featherSTM32F405.cmake  featherrp2040.cmake  featherrp2040rfm.cmake  grandcentral.cmake  kb2040.cmake  rpipico.cmake  rpipico2.cmake  rpipicow.cmake  stm32f411ce.cmake  teensy32.cmake  teensy40.cmake  teensy41.cmake  thingplusrp2040.cmake
fprime-cmsis/cmake/toolchain/support/: arduino-support.cmake  arduino-wrapper.cmake
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/: blinky.Debug+SamV71-Xplained-Board.cbuild.yml  blinky.cbuild-idx.yml  blinky.cproject.yml  blinky.csolution.yml  cdefault.yml  setup.sh
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/RTE/Device/ATSAMV71Q21B/: startup_samv71q21b.c  startup_samv71q21b.h  system_samv71q21b.c
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/RTE/RTOS/: FreeRTOSConfig.h
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/RTE/_Debug_SamV71-Xplained-Board/: RTE_Components.h
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/: blinky.Debug+SamV71-Xplained-Board.cbuild.yml  blinky.cbuild-idx.yml  blinky.cproject.yml
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/harmony/sam_v71_xult/: configuration.h
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/cmsis/samv71_blink/impls/: Driver_GPIO.c  Driver_I2C.c  Driver_USART.c
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/hal_startup/: device_common.h  hal_defs.h  main.c  pioConfig.h  samv71_bsp_cfg.c  samv71_bsp_cfg.h  startup_samv71q21b.c  startup_samv71q21b.h
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/harmony/sam_v71_xult/: freertos_hooks.c  interrupts.c
fprime-cmsis/cmake/toolchain/support/sources/samv71q21b/src/: Driver_GPIO.c  freeRTOS_hooks.c  startup_samv71q21b.h
fprime-cmsis/docs/: arduino-cli-install.md  board-list.md
fprime-cmsis/docs/rules/: 00-teensy.rules  99-adafruit-boards.rules
fprime-cmsis/docs/uploading/: cortexM0.md  cortexM4.md  esp32.md  featherESP32.md  nRF52840.md  rp2040_2350.md
(+7 files in other folders)
